--- a/public/index.html
+++ b/public/index.html
@@ -13,30 +13,32 @@
     <header>
         <h1>Mommy's to do list!</h1>
         <div class="Form_container">
-            
 
+
+        </div>
+        <h2>Daily To Do list</h2>
+
+        <form id="Add-new-task">
+            <input type="date" name="date" class="getdate" id="date" placeholder="date">
+            <input type="name" name="name" class="name" id="name" placeholder="Enter name">
+            <input type="text" name="goals" class="box" id="Add-task" placeholder="What's new?" />
+            <input type="submit" name="goals" class="btn" id="new-task-submit" value="add task" />
+            <div class="Daily Goal">
             </div>
-            <h2>Daily To Do list</h2>
-
-            <form id="Add-new-task">
-                <input type="date" name="time" class="getdate" id="date" placeholder="yyyy-mm-dd" >
-                <input type="name" name="name" class="name" id="name" placeholder="Enter name">
-                <input type="text" name="goals" class="box" id="Add-task" placeholder="What's new?" />
-                <input type="submit" name="goals" class="btn" id="new-task-submit" value="add task" />
-                <div class="Daily Goal">
-                </div>
-                <div id="Todo">
-                    <div class="ToDolist">
-                        <div class="content">
-                            <input type="text" class="box" value="What's to do?" />
-                        </div>
-                        <div class="action">
-                            <button type="button" class="btn" id="edit">Edit</button>
-                            <button type="button" class="btn"id="delete">Delete</button>
+            <div id="Todo">
+                <div class="ToDolist">
+                    <h3>Goals</h3>
+                    <!-- <div class="content">
+                        <input type="text" class="taskbox" value="What's to do?" />
+                        <div class="action"> -->
+                            <!-- <button type="button" class="btn" id="edit">Edit</button> -->
+                            <!-- <button type="button" class="btn" id="delete">Delete</button> -->
                         </div>
                     </div>
-                </div>
-            </form>
+                    
+                </div> 
+            </div>
+        </form>
         </div>
 
     </header>
